--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-oauth2-oidc": "^12.1.0",
+    "angular-oauth2-oidc-jwks": "^12.0.0",
+    "ngx-embed-video": "^1.0.4",
+    "ngx-star-rating": "^2.0.3",
+    "pipes-module": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
